--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ input[type=range]::-moz-range-track {
   width: 100%;
   height: 4px;
   cursor: pointer;
-  animate: 0.2s;
+  animation: 0.2s;
   box-shadow: 1px 1px 1px #000000;
   background: #90c100;
   border-radius: 1px;
@@ -54,7 +54,7 @@ input[type=range]::-ms-track {
   width: 100%;
   height: 11px;
   cursor: pointer;
-  animate: 0.2s;
+  animation: 0.2s;
   background: transparent;
   border-color: transparent;
   color: transparent;
